1999-04-06  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (main): keep our real uid as 0, and make
	our effective uid nonprivlidged, so we can get back to root
	later.  Don't print what port we bound to.  This info won't
	always be available or even applicable.
	* server-src/dumper.c (do_dump): create the stats line with one
	snprintf instead of a huge amount of code.

1999-04-06  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (startup_dump): make static, and const all
	of the string args
	* server-src/dumper.c (do_dump): make static

1999-04-06  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (do_dump): no need to have a separate buffer
	to read the mesgfd - just reuse the one we used for data reads.
	Gets rid of one more global.  Also, we don't need to leave
	space for a NUL anymore.
	* server-src/dumper.c (main): wait for children after closing
	our fds.  Some children may be blocked waiting for EOF on outfd,
	effectively causing deadlock between dumper and child.

1999-04-06  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (add_msg_data): now takes a 'len' arg, and
	doesn't expect the data to be nul terminated.  Also, move
	the buffer from global scope into the function, and have a NULL
	arg flush it out if there is leftover data at the end.  Finally,
	resize the buffer in 256 byte chunks.

1999-04-06  Mike Grupenhoff <kashmir@munge.com>

	* common-src/stream.c, common-src/stream.h (stream_client): add
	yet another arg - if nonzero, do a nonblocking connect
	* server-src/dumper.c: catch up with extra arg to stream_client()

1999-04-06  Mike Grupenhoff <kashmir@munge.com>

	* common-src/bsd-security.c, common-src/security.h: attempt
	to decouple security streams from security handles.  Lots of
	other restructuring.

1999-03-28 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcheck.c: -t should read the tapelist to validate
	the label.

1999-03-30  Alexandre Oliva  <oliva@dcc.unicamp.br>
